--- a/applications/platform/acquisition-server/share/interface-Generic-RawTelnetReader.ui
+++ b/applications/platform/acquisition-server/share/interface-Generic-RawTelnetReader.ui
@@ -290,27 +290,15 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="label_sampling_interframe_size">
+                      <object class="GtkLabel" id="label_sampling_endianness">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Inter frame size (skipped) :</property>
+                        <property name="label" translatable="yes">Endianness :</property>
                         <property name="justify">right</property>
                         <property name="single_line_mode">True</property>
                       </object>
                       <packing>
-                        <property name="top_attach">12</property>
-                        <property name="bottom_attach">13</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkLabel" id="label_sampling_header_size">
-                        <property name="visible">True</property>
-                        <property name="label" translatable="yes">Header size (skipped) :</property>
-                        <property name="justify">right</property>
-                        <property name="single_line_mode">True</property>
-                      </object>
-                      <packing>
-                        <property name="top_attach">11</property>
-                        <property name="bottom_attach">12</property>
+                        <property name="top_attach">9</property>
+                        <property name="bottom_attach">10</property>
                       </packing>
                     </child>
                     <child>
@@ -324,49 +312,41 @@
                         <property name="top_attach">10</property>
                         <property name="bottom_attach">11</property>
                       </packing>
-                    </child>
-                    <child>
-                      <object class="GtkLabel" id="label_sampling_endianness">
+                    </child>					
+                   <child>
+                      <object class="GtkLabel" id="label_sampling_start_size">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Endianness :</property>
+                        <property name="label" translatable="yes">Skip at start (bytes) :</property>
                         <property name="justify">right</property>
                         <property name="single_line_mode">True</property>
                       </object>
                       <packing>
-                        <property name="top_attach">9</property>
-                        <property name="bottom_attach">10</property>
+                        <property name="top_attach">11</property>
+                        <property name="bottom_attach">12</property>
                       </packing>
-                    </child>
+                    </child>	
                     <child>
-                      <object class="GtkSpinButton" id="spinbutton_interframe_size">
+                      <object class="GtkLabel" id="label_sampling_header_size">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="invisible_char">&#x25CF;</property>
-                        <property name="adjustment">adjustment_interframe_size</property>
-                        <property name="snap_to_ticks">True</property>
-                        <property name="numeric">True</property>
+                        <property name="label" translatable="yes">Skip header (bytes) :</property>
+                        <property name="justify">right</property>
+                        <property name="single_line_mode">True</property>
                       </object>
                       <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
                         <property name="top_attach">12</property>
                         <property name="bottom_attach">13</property>
                       </packing>
-                    </child>
+                    </child>				
                     <child>
-                      <object class="GtkSpinButton" id="spinbutton_header_size">
+                      <object class="GtkLabel" id="label_sampling_footer_size">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="invisible_char">&#x25CF;</property>
-                        <property name="adjustment">adjustment_header_size</property>
-                        <property name="snap_to_ticks">True</property>
-                        <property name="numeric">True</property>
+                        <property name="label" translatable="yes">Skip footer (bytes) :</property>
+                        <property name="justify">right</property>
+                        <property name="single_line_mode">True</property>
                       </object>
                       <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
-                        <property name="top_attach">11</property>
-                        <property name="bottom_attach">12</property>
+                        <property name="top_attach">13</property>
+                        <property name="bottom_attach">14</property>
                       </packing>
                     </child>
                     <child>
@@ -385,6 +365,54 @@
                         <property name="right_attach">2</property>
                         <property name="top_attach">10</property>
                         <property name="bottom_attach">11</property>
+                      </packing>
+                    </child>						
+                    <child>
+                      <object class="GtkSpinButton" id="spinbutton_start_size">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="invisible_char">&#x25CF;</property>
+                        <property name="adjustment">adjustment_start_size</property>
+                        <property name="snap_to_ticks">True</property>
+                        <property name="numeric">True</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">11</property>
+                        <property name="bottom_attach">12</property>
+                      </packing>
+                    </child>						
+                    <child>
+                      <object class="GtkSpinButton" id="spinbutton_header_size">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="invisible_char">&#x25CF;</property>
+                        <property name="adjustment">adjustment_header_size</property>
+                        <property name="snap_to_ticks">True</property>
+                        <property name="numeric">True</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">12</property>
+                        <property name="bottom_attach">13</property>
+                      </packing>
+                    </child>					
+                    <child>
+                      <object class="GtkSpinButton" id="spinbutton_footer_size">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="invisible_char">&#x25CF;</property>
+                        <property name="adjustment">adjustment_footer_size</property>
+                        <property name="snap_to_ticks">True</property>
+                        <property name="numeric">True</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">13</property>
+                        <property name="bottom_attach">14</property>
                       </packing>
                     </child>
                     <child>
@@ -580,12 +608,17 @@
       </row>
     </data>
   </object>
+  <object class="GtkAdjustment" id="adjustment_start_size">
+    <property name="upper">1024</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>  
   <object class="GtkAdjustment" id="adjustment_header_size">
     <property name="upper">1024</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkAdjustment" id="adjustment_interframe_size">
+  <object class="GtkAdjustment" id="adjustment_footer_size">
     <property name="upper">1024</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
