Drivers: Added Windows support to gTec gMOBIlab+ driver
Added support for toggling test mode of the device.
Minor code refactoring.

--- a/contrib/plugins/server-drivers/gtec-gmobilabplus/share/interface-GTec-GMobiLabPlus.ui
+++ b/contrib/plugins/server-drivers/gtec-gmobilabplus/share/interface-GTec-GMobiLabPlus.ui
@@ -244,6 +244,32 @@
                         <property name="top_attach">3</property>
                         <property name="bottom_attach">4</property>
                       </packing>
+                    </child>		
+                   <child>
+                      <object class="GtkLabel" id="label_testmode">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Use test mode :</property>
+                      </object>
+                      <packing>
+                        <property name="top_attach">6</property>
+                        <property name="bottom_attach">7</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkCheckButton" id="checkbutton_testmode">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="use_action_appearance">False</property>
+                        <property name="draw_indicator">True</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">6</property>
+                        <property name="bottom_attach">7</property>
+                      </packing>
                     </child>					
 					<!--
                     <child>
