--- a/plugins/processing/simple-visualisation/share/openvibe-simple-visualisation-SignalDisplay.ui
+++ b/plugins/processing/simple-visualisation/share/openvibe-simple-visualisation-SignalDisplay.ui
@@ -343,7 +343,20 @@
                               </packing>
                             </child>
                             <child>
-                              <placeholder/>
+                              <object class="GtkVBox" id="LeftRulerVerticalBox">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="homogeneous">True</property>
+                                <child>
+                                  <placeholder/>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="left_attach">2</property>
+                                <property name="right_attach">3</property>
+                                <property name="x_options">GTK_SHRINK</property>
+                                <property name="y_options">GTK_FILL</property>
+                              </packing>
                             </child>
                             <child>
                               <placeholder/>
