--- a/contrib/plugins/server-drivers/mbt-smarting/share/interface-MBTSmarting.ui
+++ b/contrib/plugins/server-drivers/mbt-smarting/share/interface-MBTSmarting.ui
@@ -17,9 +17,18 @@
   </object>
   <object class="GtkAdjustment" id="adjustment3">
     <property name="upper">100</property>
-    <property name="step_increment">1</property>
+	<property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
+  <object class="GtkAdjustment" id="adjustment4">
+    <property name="upper">255</property>
+    <property name="value">0</property>
+	<property name="lower">0</property>
+	<property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+
+
   <object class="GtkListStore" id="model1">
     <columns>
       <!-- column-name gchararray -->
@@ -49,7 +58,10 @@
       <row>
         <col id="0" translatable="yes">500</col>
       </row>
-    </data>
+      <row>
+        <col id="0" translatable="yes">250</col>
+      </row>
+  </data>
   </object>
   <object class="GtkDialog" id="openvibe-acquisition-server-settings">
     <property name="can_focus">False</property>
@@ -181,16 +193,17 @@
                         <property name="bottom_attach">4</property>
                       </packing>
                     </child>
-                    <child>
-                      <object class="GtkComboBox" id="combobox_device">
+					<child>
+                      <object class="GtkSpinButton" id="spinbutton_port_number">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="renderer2"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
+                        <property name="can_focus">True</property>
+                        <property name="primary_icon_activatable">False</property>
+                        <property name="secondary_icon_activatable">False</property>
+                        <property name="primary_icon_sensitive">True</property>
+                        <property name="secondary_icon_sensitive">True</property>
+                        <property name="adjustment">adjustment4</property>
+                        <property name="snap_to_ticks">True</property>
+                        <property name="numeric">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -199,11 +212,12 @@
                         <property name="bottom_attach">5</property>
                       </packing>
                     </child>
+
                     <child>
                       <object class="GtkLabel" id="label_device">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">Device :</property>
+                        <property name="label" translatable="yes">Port number :</property>
                         <property name="justify">right</property>
                         <property name="single_line_mode">True</property>
                       </object>
